# ShardPerp

./: Cargo.toml  README.md
src/: error.rs  lib.rs
src/instructions/: initialize.rs  mod.rs  reconcile.rs  update_position.rs
src/math/: entropy.rs  fixed_point.rs  mod.rs
src/state/: global.rs  mod.rs  shard.rs
tests/: test_1_parallel_isolation.rs  test_2_crdt_commutativity.rs  test_3_entropy_funding.rs  test_4_overflow_safety.rs
