[package]
name = "shard_perp"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.18.9"
borsh = "1.3.0"
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
solana-program-test = "~1.18.0"
solana-sdk = "~1.18.0"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }